--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.1.0",
+    "@react-native-community/checkbox": "^0.5.20",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
     "expo": "~53.0.13",
     "expo-checkbox": "~4.1.4",
+    "expo-image-picker": "~16.1.4",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.4",
@@ -21,6 +24,7 @@
     "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "^5.5.1",
     "react-native-screens": "^4.11.1",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
