--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@react-navigation/native-stack": "^7.3.21",
     "expo": "~53.0.13",
     "expo-checkbox": "~4.1.4",
+    "expo-document-picker": "~13.1.6",
     "expo-image-picker": "~16.1.4",
     "expo-status-bar": "~2.2.3",
+    "lottie-react-native": "7.2.2",
     "react": "19.0.0",
     "react-native": "0.79.4",
     "react-native-gesture-handler": "^2.27.1",
@@ -27,8 +29,7 @@
     "react-native-safe-area-context": "^5.5.1",
     "react-native-screens": "^4.11.1",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-vector-icons": "^10.2.0",
-    "expo-document-picker": "~13.1.6"
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
