Commit all changes

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "main",
   "expo": {
-    "name": "konceptoApp",
+    "name": "Koncepto",
     "slug": "konceptoApp",
     "version": "1.0.0",
     "orientation": "portrait",
