--- a/package.json
+++ b/package.json
@@ -11,28 +11,34 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/checkbox": "^0.5.20",
     "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
     "expo": "~53.0.13",
     "expo-checkbox": "~4.1.4",
+    "expo-clipboard": "~7.1.5",
     "expo-document-picker": "~13.1.6",
     "expo-image-picker": "~16.1.4",
     "expo-status-bar": "~2.2.3",
+    "i18n-js": "^4.5.1",
+    "lottie-ios": "^4.5.1",
     "lottie-react-native": "7.2.2",
+    "moment": "^2.30.1",
     "react": "19.0.0",
     "react-native": "0.79.4",
     "react-native-gesture-handler": "^2.27.1",
-    "react-native-reanimated": "^3.18.0",
+    "react-native-localize": "^3.5.1",
+    "react-native-reanimated": "^3.17.4",
     "react-native-safe-area-context": "^5.5.1",
     "react-native-screens": "^4.11.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "expo-module-scripts": "^4.1.9"
   },
   "private": true
 }
