--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
+    "axios": "^1.11.0",
     "expo": "~53.0.13",
     "expo-checkbox": "~4.1.4",
     "expo-clipboard": "~7.1.5",
     "expo-document-picker": "~13.1.6",
     "expo-image-picker": "~16.1.4",
+    "expo-linear-gradient": "~14.1.5",
     "expo-status-bar": "~2.2.3",
     "i18n-js": "^4.5.1",
     "lottie-ios": "^4.5.1",
@@ -30,6 +32,7 @@
     "react-native": "0.79.4",
     "react-native-gesture-handler": "^2.27.1",
     "react-native-localize": "^3.5.1",
+    "react-native-maps": "1.20.1",
     "react-native-reanimated": "^3.17.4",
     "react-native-safe-area-context": "^5.5.1",
     "react-native-screens": "^4.11.1",
@@ -38,7 +41,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "expo-module-scripts": "^4.1.9"
+    "expo-module-scripts": "^4.1.9",
+    "@react-native-community/cli": "latest"
   },
   "private": true
 }
